2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES):
	Add ../../gettext-tools/lib/unlocked-io.h.

2003-05-10  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES): Add
	../../gettext-tools/lib/progreloc.c.
	* Makefile.msvc (OBJECTS): Add progreloc.obj.
	(progreloc.obj): New rule.
	* Makefile.vms (OBJECTS): Add progreloc.obj.
	(progreloc.obj): New rule.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New variables ABIFLAGS, DEFS. Avoid rules with no
	lines. Update library creation rule. Don't use the force target.
	Correct wildcard syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (DEFS): Define DEPENDS_ON_LIBINTL, for relocatable.c.
	* Makefile.msvc (CFLAGS): Also define DEPENDS_ON_LIBINTL.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2003-03-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (stdbool.h, alloca.h): All objects depend on them.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Cleanup and support for relocatable installation.
	* basename.h: Remove file, replaced with the copy in
	../../gettext-tools/lib.
	* basename.c: Likewise.
	* error.h: Likewise.
	* error.c: Likewise.
	* exit.h: Likewise.
	* getopt.h: Likewise.
	* getopt.c: Likewise.
	* getopt1.c: Likewise.
	* xmalloc.h: Likewise.
	* xmalloc.c: Likewise.
	* alloca.c: New file, trivial link to ../../gettext-tools/lib.
	* canonicalize.c: New file, trivial link to ../../gettext-tools/lib.
	* memmove.c: New file, trivial link to ../../gettext-tools/lib.
	* relocatable.c: New file, trivial link to ../../gettext-tools/lib.